--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "Personal Resume Website",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prestart": "npm run build:styles",
+    "start": "react-scripts start",
+    "prebuild": "npm run build:styles",
+    "build": "react-scripts build",
+    "build:styles": "postcss src/tailwind.css -o src/styles.css",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "docs": "jsdoc - c jsdoc.json",
+    "predeploy": "npm run build && cp CNAME ./build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
